# python-pro-dz-9

./: .env.example  README.md  manage.py  pyproject.toml
pythonpro_dz_9/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
templates/: phone_validation.html
templates/extends/: base.html
validation/: forms.py  tasks.py  twilio_client.py  urls.py  views.py
